# cli_tool_audit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGES.md  Makefile  Makefile.old  README.md  SOURCE.md  basic_test.sh  check_changelog..py  dog_food_check.py  gen_hypothesis.py  gen_hypothesis_dupes.py  generate_about.py  junit.xml  justfile  mkdocs.yml  private_dictionary.txt  pyproject.toml  pyproject.toml.org  pytest.ini  tox.ini
.github/workflows/: build.yml  create_draft_release.yml  publish_to_pypi.yml  release.yml
cli_tool_audit/: __about__.py  __init__.py  __main__.py  _version.py  audit_cache.py  audit_manager.py  call_and_compatible.py  call_tools.py  cli_availability.py  compatibility.py  compatibility_complex.py  config_manager.py  config_reader.py  discover.py  freeze.py  interactive.py  json_utils.py  known_switches.py  known_swtiches.py  logging_config.py  models.py  pipx_stress_test.py  policy.py  venv_stress_test.py  version_parsing.py  view_npm_stress_test.py  view_pipx_stress_test.py  view_venv_stress_test.py  views.py  win.py
cli_tool_audit/gui/: __init__.py  app.py
docs/: EnvironmentVariables.md  TODO.md  UseCases.md  api.md  gui.md  index.md  requirements-docs.txt
docs/cli_tool_audit/: audit_cache.html  audit_manager.html  call_and_compatible.html  call_tools.html  compatibility.html  compatibility_complex.html  config_manager.html  config_reader.html  freeze.html  index.html  interactive.html  json_utils.html  known_switches.html  known_swtiches.html  logging_config.html  models.html  policy.html  version_parsing.html  view_npm_stress_test.html  view_pipx_stress_test.html  view_venv_stress_test.html  views.html  win.html
on_hold/: call_and_compatible_old.py  view_choco_stress_test.py  win.py
scripts/: basic_checks.sh  basic_help.sh  basic_test.sh
spec/: tkinter.md  vnext.md
tests/: test_audit_cache_extended.py  test_audit_manager.py  test_cache.py  test_call_and_compatible.py  test_call_tools.py  test_call_tools_extended.py  test_check_compatibility.py  test_check_complex_compatibility.py  test_compatibility_extended.py  test_config_manager.py  test_config_reader.py  test_discover.py  test_freeze.py  test_freeze_extended.py  test_gui.py  test_integration.py  test_interactive.py  test_json_utils.py  test_known_switches.py  test_logging_config.py  test_main.py  test_models.py  test_models_extended.py  test_policy.py  test_stress_tests.py  test_version_parsing.py  test_views.py  test_views_extended.py  tox_banner.py
tests/test_bots/test_01/: test___main__.py  test_audit_cache.py  test_audit_manager.py  test_call_and_compatible.py  test_compatibility.py  test_compatibility_complex.py  test_config_manager.py  test_config_reader.py  test_freeze.py  test_json_utils.py  test_logging_config.py  test_models.py  test_policy.py  test_version_parsing.py  test_view_npm_stress_test.py  test_view_pipx_stress_test.py  test_view_venv_stress_test.py  test_views.py
tests/test_bots/test_02/: test___main__.py  test_audit_manager.py  test_compatibility.py  test_compatibility_complex.py  test_config_manager.py  test_config_reader.py  test_json_utils.py  test_known_switches.py  test_logging_config.py  test_models.py  test_policy.py  test_version_parsing.py  test_view_npm_stress_test.py  test_view_pipx_stress_test.py
tests/test_hypothesis/: test___main__.py  test_audit_cache.py  test_audit_manager.py  test_call_and_compatible.py  test_call_tools.py  test_compatibility.py  test_compatibility_complex.py  test_config_manager.py  test_config_reader.py  test_freeze.py  test_interactive.py  test_json_utils.py  test_known_switches.py  test_logging_config.py  test_models.py  test_policy.py  test_version_parsing.py  test_view_npm_stress_test.py  test_view_pipx_stress_test.py  test_view_venv_stress_test.py  test_views.py
typings/: whichcraft.pyi
