[tool.poetry]
name = "cli_tool_audit"
version = "3.0.2"
description = "Audit for existence and version number of cli tools."
authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
keywords = ["cli tooling", "version numbers", ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = [
    "cli_tool_audit/**/*.py",
    "cli_tool_audit/**/*.md",
    "cli_tool_audit/**/*.txt",
    "cli_tool_audit/**/*.html",
    "cli_tool_audit/**/*.jinja",
    "cli_tool_audit/py.typed",
]
exclude = [
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthewdeanmartin/cli_tool_audit"
homepage = "https://github.com/matthewdeanmartin/cli_tool_audit"
documentation = "https://matthewdeanmartin.github.io/cli_tool_audit/cli_tool_audit/index.html"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/cli_tool_audit/issues"
"Change Log" = "https://github.com/matthewdeanmartin/cli_tool_audit/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
cli_tool_audit = 'cli_tool_audit.__main__:main'
tool_audit = 'cli_tool_audit.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8"

# file finding
whichcraft = ">=0.6.1"

# version parsing
semver = ">=3.0.2"
packaging = ">=23.2"

# UI
prettytable = ">=3.9.0"
colorama = ">=0.4.6"
colorlog = ">=6.8.0"
tqdm = ">=4.66.1"

# Config
toml = ">=0.10.2"
tomlkit = ">=0.12.3"

# metadata, don't need it!
# importlib-metadata = { version = ">=7.0.1", python = "<3.8" }


[tool.poetry.dev-dependencies]
pyclean = ">=3.0.0"
vulture = ">=2.11"
deadcode = ">=2.3.0"

# build tools
black = ">=23.11.0"
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
pytest-xdist =">=3.5.0"
pytest-randomly=">=3.15.0"
pytest-sugar =">=0.9.7"

hypothesis = ">=6.96.0"
tox = "*"
pylint = ">=3.0.2"
ruff = ">=0.1.9"

# types
mypy = ">=1.8.0"
types-toml = "*"
types-colorama = "*"
types-tqdm = "*"

# more testing
# pytest-snapshot = ">=0.9.0"
# pytest-asyncio = ">=0.23.2"
#anyio = ">=4.2.0"
#trio = ">=0.23.2"

pre-commit = ">=3.5.0"
scriv = ">=1.5.0"

# docs
interrogate = ">=1.5.0"
pydoctest = ">=0.1.22"
pdoc3 = ">=0.10.0"
mdformat = ">=0.7.17"
linkcheckmd = ">=1.4.0"
codespell = ">=2.2.6"
pyenchant = ">=3.2.2"
metametameta=">=0.1.0"
#
# contract
# griffe = ">=0.38.1"


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["dedlin"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 1000

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007", "UP038", # Not sure if | is well supported in lowever versions of python
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
main_branches = "master, main, develop, dev"

[mypy]
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_no_return = true

mypy_path = [".", "$MYPY_CONFIG_FILE_DIR/typings", "typings"]
files = ["cli_tool_audit", "typings"]

[mypy.pygount]
ignore_missing_imports = true

[mypy.astor]
ignore_missing_imports = true


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.cli-tools]
make = {name = "make", version = ">=3.81", schema = "semver", tags = ["build"]}
python = {name = "python", version = ">=3.11.1", schema = "semver", tags = ["build"]}
java = {name = "java", version = ">=17.0.6", schema = "semver", tags = ["build"]}

pipx = {name = "pipx", version = ">=1.0.0", version_switch = "--version", schema = "semver"}
mypy = {name = "mypy", version = ">=1.0.0", schema = "semver", tags = ["build", "work"], install_command = "pipx install mypy", install_docs = "https://mypy.readthedocs.io/en/stable/getting_started.html"}
pylint = {name = "pylint", version = ">=1.0.0", schema = "semver", tags = ["build", "work", "user"]}
black = {name = "black", version = ">=1.0.0", schema = "semver"}
pygount = {name = "pygount", version = ">=1.6.0", schema = "semver"}
ruff = {name = "ruff", version = "0.*", schema = "semver"}
vulture = {name = "vulture", version = "*", schema = "semver"}

terraform = {name = "terraform", version = ">=1.2.9", schema = "semver"}

# demo of files that don't exist
doesnotexist = {name = "doesnotexist", version = ">=1.0.0", schema = "semver"}
# Just check existence
notepad = {name = "notepad", schema = "existence"}
rustc = {name = "rustc", version = ">=1.67.0", schema = "semver"}
"yes.exe" = {name = "yes.exe", version = ">=1.0.0", schema = "semver"}
"yes" = {name = "yes", version = "~1.0.0", schema = "semver"}
podman = {name = "podman", version = "^4.6.0", schema = "semver"}
tesseract = {name = "tesseract", version = ">=5.1.0.20220510", schema = "semver"}
pandoc = {name = "pandoc", version = ">=2.7.3", schema = "semver"}
nano = {name = "nano", version = ">=7.1", schema = "semver"}
shellcheck = {name = "shellcheck", version = ">=0.8.0", schema = "semver"}
choco = {name = "choco", version = ">=0.10.13", schema = "semver"}
brew = {name = "brew", version = ">=0.0.0", schema = "semver", if_os = "darwin"}
poetry = {name = "poetry", version = "Poetry (version 1.5.1)", schema = "snapshot"}


