[project]
name = "cli_tool_audit"
version = "3.2.0"
description = "Audit for existence and version number of cli tools."
authors = [
    {name = "Matthew Martin", email = "matthewdeanmartin@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["cli tooling", "version numbers", ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "whichcraft>=0.6.1",
    "semver>=3.0.2",
    "packaging>=23.2",
    "prettytable>=3.9.0",
    "colorama>=0.4.6",
    "colorlog>=6.8.0",
    "tqdm>=4.66.1",
    "toml>=0.10.2",
    "tomlkit>=0.12.3",
]

[project.urls]
"Bug Tracker" = "https://github.com/matthewdeanmartin/cli_tool_audit/issues"
"Change Log" = "https://github.com/matthewdeanmartin/cli_tool_audit/blob/main/CHANGELOG.md"

[project.scripts]
cli_tool_audit = 'cli_tool_audit.__main__:main'
tool_audit = 'cli_tool_audit.__main__:main'

[project.gui-scripts]
"cli_tool_audit-gui" = 'cli_tool_audit.gui.app:launch_gui'


[dependency-groups]
dev = [
    "jiggle-version>=2.1.0",
    "troml-dev-status>=0.6.0",
    "dont-be-lazy>=0.1.2; python_version >= '3.10'",
    "pydoc-fork>=3.0.0; python_version >= '3.10'",
    "keepachangelog-manager-fork[all]>=6.6.0",

    "git2md; python_version >= '3.10'",
    "pyclean; python_version >= '3.12'",
    "strip-docs>=1.0; python_version >= '3.12'",
    "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "mdformat",
    # plugin finder
    "packaging; python_version >= '3.8'",
    # mpy
    "mypy; python_version >= '3.8'",
    "types-toml; python_version >= '3.8'",
    # reports

    # build
    "vermin; python_version >= '3.8'",
    "metametameta>=0.1.14; python_version >= '3.9'",
    "hatchling; python_version >= '3.8'",
    "ruff>=0.12.0; python_version >= '3.8'",
    "pylint; python_version >= '3.8'",
    "bandit; python_version >= '3.8'",
    "pre-commit; python_version >= '3.8'",
    # testing tools
    "pytest; python_version >= '3.8'",
    "pytest-cov; python_version >= '3.8'",
    "pytest-xdist>=3.5.0; python_version >= '3.8'",
    "pytest-randomly>=3.15.0; python_version >= '3.8'",
    "pytest-sugar>=0.9.7; python_version >= '3.8'",
    "pytest-mock; python_version >= '3.8'",
    "pytest-unused-fixtures; python_version >= '3.10'",
    "hypothesis[cli]; python_version >= '3.8'",
    "detect-test-pollution",
    "pytest-timeout>=2.4.0",
    "pytest-network",
    "pytest-unused-fixtures",
    # docs
    "interrogate>=1.5.0; python_version >= '3.8'",
    "pydoctest==0.2.1; python_version >= '3.8'",
    "pdoc3>=0.5.0; python_version >= '3.8'",
    "mdformat>=0.5.0; python_version >= '3.8'",
    "linkcheckmd>=1.4.0; python_version >= '3.8'",
    "codespell>=2.2.6; python_version >= '3.8'",
    "pyenchant>=3.2.2; python_version >= '3.8'",
    "hatch>=1.16.5; python_version >= '3.10'"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.pip]
universal = true
[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]
# don't know how to do this in toml
#addopts = "--strict-markers"
#markers =
#	slow: marks tests as slow (deselect with '-m "not slow"')
#	fast: marks tests as fast (deselect with '-m "not fast"')


[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["dedlin"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 320

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007", "UP038", # Not sure if | is well supported in lowever versions of python
]

# Exclude a variety of commonly ignored directories.
exclude = [
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
format = "md"
main_branches = "master, main, develop, dev"

# changelogmanager (keepachangelog-manager-fork) drives the release workflows.
# See .github/workflows/create_draft_release.yml and release.yml.
[tool.changelogmanager.versioning]
scheme = "semver"

[tool.changelogmanager.validation]
enforce_preamble = true
format = "auto"

[tool.changelogmanager.defaults]
error_format = "github"
commit_schema = "keepachangelog"
schema_version = "current"

[[tool.changelogmanager.components]]
name = "default"
changelog = "CHANGELOG.md"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]


[tool.cli-tools]
make = {name = "make", version = ">=3.81", schema = "semver", tags = ["build"]}
python = {name = "python", version = ">=3.11.1", schema = "semver", tags = ["build"]}
java = {name = "java", version = ">=17.0.6", schema = "semver", tags = ["build"]}

pipx = {name = "pipx", version = ">=1.0.0", version_switch = "--version", schema = "semver"}
mypy = {name = "mypy", version = ">=1.0.0", schema = "semver", tags = ["build", "work"], install_command = "pipx install mypy", install_docs = "https://mypy.readthedocs.io/en/stable/getting_started.html"}
pylint = {name = "pylint", version = ">=1.0.0", schema = "semver", tags = ["build", "work", "user"]}
black = {name = "black", version = ">=1.0.0", schema = "semver"}
pygount = {name = "pygount", version = ">=1.6.0", schema = "semver"}
ruff = {name = "ruff", version = "0.*", schema = "semver"}
vulture = {name = "vulture", version = "*", schema = "semver"}

terraform = {name = "terraform", version = ">=1.2.9", schema = "semver"}

# demo of files that don't exist
doesnotexist = {name = "doesnotexist", version = ">=1.0.0", schema = "semver"}
# Just check existence
notepad = {name = "notepad", schema = "existence"}
rustc = {name = "rustc", version = ">=1.67.0", schema = "semver"}
"yes.exe" = {name = "yes.exe", version = ">=1.0.0", schema = "semver"}
"yes" = {name = "yes", version = "~1.0.0", schema = "semver"}
podman = {name = "podman", version = "^4.6.0", schema = "semver"}
tesseract = {name = "tesseract", version = ">=5.1.0.20220510", schema = "semver"}
pandoc = {name = "pandoc", version = ">=2.7.3", schema = "semver"}
nano = {name = "nano", version = ">=7.1", schema = "semver"}
shellcheck = {name = "shellcheck", version = ">=0.8.0", schema = "semver"}
choco = {name = "choco", version = ">=0.10.13", schema = "semver"}
brew = {name = "brew", version = ">=0.0.0", schema = "semver", if_os = "darwin"}
poetry = {name = "poetry", version = "Poetry (version 1.5.1)", schema = "snapshot"}
isort = {name = "isort", version = "_                 _\n                (_) ___  ___  _ __| |_\n                | |/ _/ / _ \\/ '__  _/\n                | |\\__ \\/\\_\\/| |  | |_\n                |_|\\___/\\___/\\_/   \\_/\n\n      isort your imports, so you don't have to.\n\n                    VERSION 5.13.2", schema = "snapshot"}
